--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,7 +11,10 @@ jobs:
       - uses: actions/checkout@v4
       
       # Since there is no build step (static files), we skip npm install/build
-      
+      # Create firebase-config.js from Secret
+      - name: Create firebase-config.js
+        run: echo "${{ secrets.FIREBASE_CONFIG }}" > firebase-config.js
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
