--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,11 +11,11 @@ jobs:
       - uses: actions/checkout@v4
       
       # Since there is no build step (static files), we skip npm install/build
-      # Create firebase-config.js from Secret (Safe for quotes)
+      # Create firebase-config.js from Base64 Secret
       - name: Create firebase-config.js
         env:
-          FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
-        run: node -e 'const fs = require("fs"); fs.writeFileSync("firebase-config.js", process.env.FIREBASE_CONFIG);'
+          FIREBASE_CONFIG_B64: ${{ secrets.FIREBASE_CONFIG_B64 }}
+        run: node -e 'const fs = require("fs"); fs.writeFileSync("firebase-config.js", Buffer.from(process.env.FIREBASE_CONFIG_B64, "base64").toString("utf8"));'
 
       # Remove from .gitignore so Firebase deploys it
       - name: Un-ignore firebase-config.js
